Corrected full screen bug on MacOS and updated full screen controls